# dotfiles

./: .gitignore  LICENSE.md  README.md  pyproject.toml  test-yaml-colors.yml
.openspec/: README.md  agent-system.md  grounded-c4.md  openspec-commands.md
atom/: brew_packages  install.sh
aws/: bash_env  brew_packages  install.sh
bash/: aliases.sh  bash_aliases  bash_completion  bash_env  bash_profile.symlink  bash_shortcuts  bashrc.symlink  brew_packages  install.sh
brew/: bash_completion  brew_install.sh  install.sh
claude/: bash_aliases  bash_clean  brew_packages  install.sh
docker/: bash_aliases  bash_completion  bash_env  brew_packages  install.sh
docs/: agent-system.md  bash_reference.md  claude-sandbox.md  claude-team-container.md  coloring.md  commands.md  getting_help.md  grep.md  openspec-commands.md  xdg_setup.md
fzf/: bash_completion  bash_env  bash_shortcuts  brew_packages
gcp/: bash_env
ghostty/: bash_aliases  bash_shortcuts  brew_packages
git/: aliases.sh  bash_aliases  bash_completion  bash_env  brew_packages  gitconfig.symlink  gitconfig.symlink.example  gitconfig.template  install.sh
go/: bash_aliases  bash_env  brew_packages  install.sh
homebrew/: bash_env  brew_install.sh
java/: brew_packages
kotlin/: bash_env  brew_packages  install.sh
latex/: bash_aliases  brew_packages
mariadb/: brew_packages
mysql/: bash_aliases  brew_packages
node/: bash_env  brew_packages  install.sh
npm/: brew_packages
nvim/: bash_aliases  bash_env  bash_shortcuts  brew_packages  install.sh
ollama/: bash_env  brew_packages
(+243 files in other folders)
