[project]
name = "dotfiles-arch"
version = "0.1.0"
description = "Grounded C4 Architecture Modeling System"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["local/lib"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
